--- a/static/front/css/front_pdetail.css
+++ b/static/front/css/front_pdetail.css
@@ -4,10 +4,10 @@
 }
 .post-container{
     border:1px solid #e6e6e6;
-    padding: 10px;
+    padding: 100px;
 }
 .post-info-group{
-    font-size: 12px;
+    font-size: 18px;
     color: #8c8c8c;
     border-bottom:1px solid #e6e6e6;
     margin-top: 20px;
@@ -69,4 +69,92 @@
 }
 .comment-content .comment-txt{
     margin-top: 10px;
+}
+
+.issued_btn{
+    width: 86px;
+    height: 38px;
+    font-size: 14px;
+    text-align: center;
+    line-height: 38px;
+    color: #fff;
+    cursor: pointer;
+    margin: 0 auto 20px;
+    background:#ff7900;
+}
+
+.progress-div{
+            background: rgba(0, 0, 0, 0.03);
+            width: 500px;
+            height: 140px;
+            padding: 60px 20px;
+            visibility: hidden;
+        }
+.progress{
+    margin: 0;
+    width: 100%;
+}
+
+/*.extend{*/
+/*    */
+/*}*/
+.linkwz{
+    font-size: 14px;
+    text-align: center;
+    line-height: 38px;
+    color: #ff7900;
+}
+
+
+.linkwz a{
+
+    color: #ff7900;
+}
+
+.setintover{
+    font-size: 30px;
+    text-align: center;
+    line-height: 38px;
+    color: #FF0000;
+}
+
+.operation_btn{
+
+    height: 24px;
+    text-align: center;
+    line-height: 24px;
+    color: #fff;
+    /*margin-bottom: 10px;*/
+    width: 82px;
+    /*cursor: pointer;*/
+    font-size: 12px;
+    /*float: left;*/
+}
+
+.operation_div{
+margin: 0 auto;
+    width: 300px;
+    height: 50px;
+
+}
+
+
+.operation_div div{
+
+    width: 33.33%;
+    float: left;
+    padding: 10px;
+
+}
+
+.issued{
+    width: 86px;
+    height: 38px;
+    font-size: 14px;
+    text-align: center;
+
+    color: #fff;
+    cursor: pointer;
+    margin: 0 auto 20px;
+    background:#ff7900;
 }
