--- a/templates/cms/cms_base.html
+++ b/templates/cms/cms_base.html
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">王者论坛管理后台</a>
+            <a class="navbar-brand" href="#">竞赛论坛管理后台</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
