--- a/templates/front/front_base.html
+++ b/templates/front/front_base.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">王者论坛</a>
+      <a class="navbar-brand" href="/">竞赛论坛</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -34,12 +34,12 @@
         <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
 
       </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="请输入关键字">
-        </div>
-        <button type="submit" class="btn btn-default">搜索</button>
-      </form>
+{#      <form class="navbar-form navbar-left">#}
+{#        <div class="form-group">#}
+{#          <input type="text" class="form-control" placeholder="请输入关键字">#}
+{#        </div>#}
+{#        <button type="submit" class="btn btn-default">搜索</button>#}
+{#      </form>#}
       <ul class="nav navbar-nav navbar-right">
 
           {% if g.front_user %}
