--- a/templates/cms/cms_base.html
+++ b/templates/cms/cms_base.html
@@ -50,17 +50,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">竞赛论坛管理后台</a>
+            <a class="navbar-brand" href="#">竞赛管理后台</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ url_for('cms.profile') }}">{{ g.cms_user.username }}</a></li>
                 <li><a href="{{ url_for('cms.logout') }}">注销</a></li>
             </ul>
-            <form class="navbar-form navbar-right">
-
-                <input type="text" class="form-control" placeholder="查找...">
-            </form>
+{#            <form class="navbar-form navbar-right">#}
+{##}
+{#                <input type="text" class="form-control" placeholder="查找...">#}
+{#            </form>#}
         </div>
     </div>
 </nav>
@@ -79,35 +79,37 @@
                     </ul>
                 </li>
 
-                    <li class="nav-group banner-manage"><a href="{{ url_for('cms.banners') }}">轮播图管理</a></li>
-                    <li class="nav-group banner-manage"><a href="{{ url_for('cms.tasks') }}">任务管理</a></li>
+{#                    <li class="nav-group banner-manage"><a href="{{ url_for('cms.banners') }}">轮播图管理</a></li>#}
+                    <li class="nav-group banner-manage"><a href="{{ url_for('cms.tasks') }}">镜像管理</a></li>
+                    <li class="nav-group banner-manage"><a href="{{ url_for('cms.works') }}">任务管理</a></li>
+                    <li class="nav-group banner-manage"><a href="{{ url_for('cms.hosts') }}">主机管理</a></li>
 
-                    {% if  g.cms_user.has_permission(CMPermission.POSTER) %}
-                        <li class="nav-group post-manage"><a href="{{ url_for('cms.posts') }}">帖子管理</a></li>
-                    {% endif %}
-                
-                    {% if  g.cms_user.has_permission(CMPermission.COMMENTER) %}
-                        <li class="comments-manage"><a href="{{ url_for('cms.comments') }}">评论管理</a></li>
-                    {% endif %}
-                
-
-                    {% if  g.cms_user.has_permission(CMPermission.BOARDER) %}
-                        <li class="board-manage"><a href="{{ url_for('cms.boards') }}">板块管理</a></li>
-                    {% endif %}
-
-                    {% if  g.cms_user.has_permission(CMPermission.FRONTUSER) %}
-                        <li class="nav-group user-manage"><a href="{{ url_for('cms.fusers') }}">前台用户管理</a></li>
-
-                    {% endif %}
-
-                    {% if  g.cms_user.has_permission(CMPermission.CMSUSER) %}
-                        <li class="nav-group cmsuser-manage"><a href="{{ url_for('cms.cusers') }}">CMS用户管理</a></li>
-                    {% endif %}
-
-                    {% if  g.cms_user.is_developer %}
-                        <li class="cmsrole-manage"><a href="{{ url_for('cms.croles') }}">CMS组管理</a></li>
-
-                    {% endif %}
+{#                    {% if  g.cms_user.has_permission(CMPermission.POSTER) %}#}
+{#                        <li class="nav-group post-manage"><a href="{{ url_for('cms.posts') }}">帖子管理</a></li>#}
+{#                    {% endif %}#}
+{#                #}
+{#                    {% if  g.cms_user.has_permission(CMPermission.COMMENTER) %}#}
+{#                        <li class="comments-manage"><a href="{{ url_for('cms.comments') }}">评论管理</a></li>#}
+{#                    {% endif %}#}
+{#                #}
+{##}
+{#                    {% if  g.cms_user.has_permission(CMPermission.BOARDER) %}#}
+{#                        <li class="board-manage"><a href="{{ url_for('cms.boards') }}">板块管理</a></li>#}
+{#                    {% endif %}#}
+{##}
+{#                    {% if  g.cms_user.has_permission(CMPermission.FRONTUSER) %}#}
+{#                        <li class="nav-group user-manage"><a href="{{ url_for('cms.fusers') }}">前台用户管理</a></li>#}
+{##}
+{#                    {% endif %}#}
+{##}
+{#                    {% if  g.cms_user.has_permission(CMPermission.CMSUSER) %}#}
+{#                        <li class="nav-group cmsuser-manage"><a href="{{ url_for('cms.cusers') }}">CMS用户管理</a></li>#}
+{#                    {% endif %}#}
+{##}
+{#                    {% if  g.cms_user.is_developer %}#}
+{#                        <li class="cmsrole-manage"><a href="{{ url_for('cms.croles') }}">CMS组管理</a></li>#}
+{##}
+{#                    {% endif %}#}
 
             </ul>
         </div>
