--- a/templates/cms/cms_index.html
+++ b/templates/cms/cms_index.html
@@ -1,9 +1,9 @@
 {% extends 'cms/cms_base.html' %}
 
 {% block title %}
-王者荣耀CMS管理系统
+竞赛CMS管理系统
 {% endblock %}
 
 {% block page_title %}
-    欢迎来到王者荣耀CMS管理系统
+    欢迎来到竞赛CMS管理系统
 {% endblock %}
