--- a/templates/cms/cms_login.html
+++ b/templates/cms/cms_login.html
@@ -36,11 +36,11 @@
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="邮箱" required autofocus>
         <label for="inputPassword" class="sr-only">密码：</label>
         <input type="password" name="password" id="inputPassword" class="form-control" placeholder="密码" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="1" name="remember"> 记住我
-          </label>
-        </div>
+{#        <div class="checkbox">#}
+{#          <label>#}
+{#            <input type="checkbox" value="1" name="remember"> 记住我#}
+{#          </label>#}
+{#        </div>#}
         <button class="btn btn-lg btn-primary btn-block" type="submit">立即登录</button>
       </form>
 
