--- a/templates/front/front_index.html
+++ b/templates/front/front_index.html
@@ -63,23 +63,23 @@
                         <li><a href="/">最新</a></li>
                     {% endif %}
 
-                    {% if current_st == 2 %}
-                        <li class="active"><a href="{{ url_for('front.index',st=2) }}">精华帖子</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('front.index',st=2,bd=current_board) }}">精华帖子</a></li>
-                    {% endif %}
-
-                    {% if current_st == 3 %}
-                        <li class="active"><a href="{{ url_for('front.index',st=3) }}">点赞最多</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('front.index',st=3,bd=current_board) }}">点赞最多</a></li>
-                    {% endif %}
-
-                    {% if current_st == 4 %}
-                        <li class="active"><a href="{{ url_for('front.index',st=4) }}">评论最多</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('front.index',st=4,bd=current_board) }}">评论最多</a></li>
-                    {% endif %}
+{#                    {% if current_st == 2 %}#}
+{#                        <li class="active"><a href="{{ url_for('front.index',st=2) }}">精华帖子</a></li>#}
+{#                    {% else %}#}
+{#                        <li><a href="{{ url_for('front.index',st=2,bd=current_board) }}">精华帖子</a></li>#}
+{#                    {% endif %}#}
+{##}
+{#                    {% if current_st == 3 %}#}
+{#                        <li class="active"><a href="{{ url_for('front.index',st=3) }}">点赞最多</a></li>#}
+{#                    {% else %}#}
+{#                        <li><a href="{{ url_for('front.index',st=3,bd=current_board) }}">点赞最多</a></li>#}
+{#                    {% endif %}#}
+{##}
+{#                    {% if current_st == 4 %}#}
+{#                        <li class="active"><a href="{{ url_for('front.index',st=4) }}">评论最多</a></li>#}
+{#                    {% else %}#}
+{#                        <li><a href="{{ url_for('front.index',st=4,bd=current_board) }}">评论最多</a></li>#}
+{#                    {% endif %}#}
 
 
 
@@ -133,30 +133,30 @@
 
     </div>
 
-{#    所有板块#}
+
     <div class="sm-container">
-        <div style="padding-bottom: 10px">
-            <a href="{{ url_for('front.apost') }}" class="btn btn-warning btn-block">发布帖子</a>
-
-        </div>
-
-        <div class="list-group">
-
-            {% if current_board %}
-                <a href="/" class="list-group-item">所有板块</a>
-            {% else %}
-                <a href="/" class="list-group-item active">所有板块</a>
-            {% endif %}
-
-            {% for board in boards %}
-                {% if current_board == board.id %}
-                <a href="{{ url_for('front.index',bd=board.id) }}" class="list-group-item active" >{{ board.name }}</a>
-                {% else %}
-                <a href="{{ url_for('front.index',bd=board.id) }}" class="list-group-item">{{ board.name }}</a>
-                {% endif %}
-            {% endfor %}
-
-        </div>
+{#        <div style="padding-bottom: 10px">#}
+{#            <a href="{{ url_for('front.apost') }}" class="btn btn-warning btn-block">发布帖子</a>#}
+{##}
+{#        </div>#}
+{##}
+{#        <div class="list-group">#}
+{##}
+{#            {% if current_board %}#}
+{#                <a href="/" class="list-group-item">所有板块</a>#}
+{#            {% else %}#}
+{#                <a href="/" class="list-group-item active">所有板块</a>#}
+{#            {% endif %}#}
+{##}
+{#            {% for board in boards %}#}
+{#                {% if current_board == board.id %}#}
+{#                <a href="{{ url_for('front.index',bd=board.id) }}" class="list-group-item active" >{{ board.name }}</a>#}
+{#                {% else %}#}
+{#                <a href="{{ url_for('front.index',bd=board.id) }}" class="list-group-item">{{ board.name }}</a>#}
+{#                {% endif %}#}
+{#            {% endfor %}#}
+{##}
+{#        </div>#}
 
     </div>
 
