--- a/templates/front/front_signin.html
+++ b/templates/front/front_signin.html
@@ -33,11 +33,11 @@
 
 
             {#    记住我#}
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="remember" value="1">记住我
-                </label>
-            </div>
+{#            <div class="checkbox">#}
+{#                <label>#}
+{#                    <input type="checkbox" name="remember" value="1">记住我#}
+{#                </label>#}
+{#            </div>#}
 
             <div class="form-group">
                 <button id="submit-btn" class="btn btn-warning btn-block">立即登录</button>
