--- a/templates/front/front_signbase.html
+++ b/templates/front/front_signbase.html
@@ -35,10 +35,10 @@
 <body>
     <div class="outer-box">
         <div class="logo-box">
-            <a href="/">
-                <img src="{{ static('common/images/77.jpg') }}" alt="">
-
-            </a>
+{#            <a href="/">#}
+{#                <img src="{{ static('common/images/77.jpg') }}" alt="">#}
+{##}
+{#            </a>#}
 
         </div>
 
