--- a/templates/front/front_signin.html
+++ b/templates/front/front_signin.html
@@ -45,7 +45,7 @@
 
             <div class="form-group">
                 <a href="{{ url_for('front.signup') }}" class="signup-link">没有账号?立即注册</a>
-                <a href="#" class="resetpwd-link" style="float: right;">忘记密码?</a>
+{#                <a href="#" class="resetpwd-link" style="float: right;">忘记密码?</a>#}
             </div>
 {% endblock %}
 
