--- a/templates/front/front_base.html
+++ b/templates/front/front_base.html
@@ -52,9 +52,8 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="#">个人中心</a></li>
-                <li><a href="#">设置</a></li>
-                <li><a href="#">注销</a></li>
+{#                <li><a href="#">个人中心</a></li>#}
+                <li><a href="{{ url_for('front.flogout') }}">注销</a></li>
 
               </ul>
             </li>
