纠正前的代码提交

--- a/templates/front/front_index.html
+++ b/templates/front/front_index.html
@@ -121,7 +121,7 @@
             </ul>
 
         <div style="text-align: center">
-
+<p>9999</p>
             {{ pagination.links }}
 
         </div>
@@ -159,17 +159,6 @@
 {#        </div>#}
 
     </div>
+    </div>
 
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
