--- a/templates/cms/cms_hosts.html
+++ b/templates/cms/cms_hosts.html
@@ -1,5 +1,7 @@
 {% extends 'cms/cms_base.html' %}
 {%  from 'common/_macros.html' import static %}
+{% import 'common/macro_paginate.html' as paginator %}
+
 
 
 {% block title %}
@@ -52,13 +54,14 @@
         </thead>
 
         <tbody>
-                {% for banner in allbanner %}
+                {% for banner in all_host.items %}
                     <tr data-name="{{ banner.name }}" data-img="{{ banner.ip }}" data-link="{{ banner.status }}" data-id="{{ banner.id }}">
                         <td>{{ banner.name }}</td>
 
                         <td>{{ banner.ip }}</td>
 
-                        <td>{{ banner.status|host_status }}</td>
+{#                        <td>{{ banner.status|host_status }}</td>#}
+                        <td>{% if banner.status == '1' %} 在线  {% elif banner.status == '0' %} 离线 {% endif %}</td>
                         <td>{{ banner.worknum }}</td>
                         <td>{{ banner.syn_mirror }}</td>
                         <td>{{ banner.create_time }}</td>
@@ -75,6 +78,12 @@
         </tbody>
     </table>
 
+
+         <div style="text-align: center">
+
+            {{ paginator.paginate(all_host,'cms.hosts') }}
+
+        </div>
 
 
     {# 定义添加轮播图弹窗，弹窗有自己单独的一个 html #}
@@ -114,12 +123,12 @@
 {#                            <button class="col-sm-2 btn btn-info" id="upload-btn">添加镜像</button>#}
 {#                        </div>#}
 
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">状态:</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="priority" placeholder="主机状态">
-                            </div>
-                        </div>
+{#                        <div class="form-group">#}
+{#                            <label class="col-sm-2 control-label">状态:</label>#}
+{#                            <div class="col-sm-10">#}
+{#                                <input type="text" class="form-control" name="priority" placeholder="主机状态">#}
+{#                            </div>#}
+{#                        </div>#}
 
 {#                        <div class="form-group">#}
 {#                            <label class="col-sm-2 control-label">权重:</label>#}
