--- a/templates/cms/cms_tasks.html
+++ b/templates/cms/cms_tasks.html
@@ -1,5 +1,6 @@
 {% extends 'cms/cms_base.html' %}
 {%  from 'common/_macros.html' import static %}
+{% import 'common/macro_paginate.html' as paginator %}
 
 
 {% block title %}
@@ -53,7 +54,7 @@
         </thead>
 
         <tbody>
-                {% for banner in allbanner %}
+                {% for banner in all_task.items %}
                     <tr data-name="{{ banner.name }}" data-img="{{ banner.image_url }}" data-link="{{ banner.link_url }}" data-priority="{{ banner.priority }}" data-id="{{ banner.id }}">
                         <td>{{ banner.name }}</td>
 
@@ -75,7 +76,11 @@
         </tbody>
     </table>
 
+     <div style="text-align: center">
 
+            {{ paginator.paginate(all_task,'cms.tasks') }}
+
+        </div>
 
     {# 定义添加轮播图弹窗，弹窗有自己单独的一个 html #}
     <div class="modal fade" id="banner-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
