--- a/templates/cms/cms_login.html
+++ b/templates/cms/cms_login.html
@@ -33,7 +33,7 @@
 
         <h2 class="form-signin-heading">请登录</h2>
         <label for="inputEmail" class="sr-only">邮箱：</label>
-        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="邮箱" required autofocus>
+        <input type="text" name="email" id="inputEmail" class="form-control" placeholder="账户" required autofocus>
         <label for="inputPassword" class="sr-only">密码：</label>
         <input type="password" name="password" id="inputPassword" class="form-control" placeholder="密码" required>
 {#        <div class="checkbox">#}
