--- a/templates/cms/cms_tasks.html
+++ b/templates/cms/cms_tasks.html
@@ -130,12 +130,26 @@
 {#                            <button class="col-sm-2 btn btn-info" id="upload-btn">添加镜像</button>#}
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" id="flagpath">
                             <label class="col-sm-2 control-label">flag:</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="priority" placeholder="flag">
                             </div>
                         </div>
+
+
+
+{#                <div class="form-group" id="flagpath">#}
+{#                            <label class="col-sm-2 control-label">flag:</label>#}
+{#                            <div class="col-sm-10">#}
+{#                                <input type="text" class="form-control" name="priority" placeholder="flag">#}
+{#                            </div>#}
+{#                        </div>#}
+
+
+
+
+
 
 {#                        <div class="form-group">#}
 {#                            <label class="col-sm-2 control-label">权重:</label>#}
