--- a/templates/cms/cms_base.html
+++ b/templates/cms/cms_base.html
@@ -12,9 +12,14 @@
 
     {% endblock %}</title>
 
-    <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+{#    <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>#}
+{#    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">#}
+{#    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>#}
+
+    <script src="{{ url_for("static",filename = "cms/js/jquery.min.js")}}"></script>
+    <link href="{{ url_for("static",filename = "cms/css/bootstrap.min.css")}}" rel="stylesheet">
+    <script src="{{ url_for("static",filename = "cms/js/bootstrap.min.js")}}"></script>
+
 
     {#    前端弹窗提示sweetalert#}
     <link href="{{ static('common/sweetalert/sweetalert.css') }}" rel="stylesheet">
